<resources>
    <string name="app_name">A Fridge Too Far</string>
    <string name="A_FRIDGE_TOO_FAR">A\nFRIDGE\nTOO\nFAR</string>
    <string name="Enter_Delivery_Address">Enter Delivery Address</string>
    <string name="DoorDash">DoorDash</string>
    <string name="Uber_Eats">Uber Eats</string>
    <string name="Grubhub">Grubhub</string>
    <string name="Postmates">Postmates</string>
    <string name="SEARCHING">SEARCHING</string>
    <string name="View_on">View On</string>
    <string name="Search_Again">Search Again</string>
    <string name="Back">Back</string>
    <string name="Donate">Buy Me A Coffee</string>
    <string name="Address_not_available">Address unavailable. Please change address or select a different app</string>
</resources>
