<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/gray2"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:onClick="onBackgroundClicked"
    android:padding="50dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/A_FRIDGE_TOO_FAR"
        style="@style/largeTitleTextView" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/Enter_Delivery_Address"
        android:imeOptions="actionSearch"
        android:outlineProvider="none"
        android:singleLine="true"
        android:theme="@style/autoCompleteTextViewTheme"
        style="@style/autoCompleteTextView" />

    <TextView
        android:id="@+id/addressNotFoundTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@+id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Address_not_available"
        style="@style/addressNotFoundTextView" />

    <TextView
        android:id="@+id/searchingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/SEARCHING"
        style="@style/mediumTitleTextView" />

    <LinearLayout
        android:id="@+id/installedAppsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/doorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAppClicked"
            android:padding="10dp"
            android:text="@string/DoorDash"
            android:visibility="gone"
            style="@style/appSelectionTextView" />

        <TextView
            android:id="@+id/grubTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAppClicked"
            android:padding="10dp"
            android:text="@string/Grubhub"
            style="@style/appSelectionTextView" />

        <TextView
            android:id="@+id/postTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAppClicked"
            android:padding="10dp"
            android:text="@string/Postmates"
            style="@style/appSelectionTextView" />

        <TextView
            android:id="@+id/uberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAppClicked"
            android:padding="10dp"
            android:text="@string/Uber_Eats"
            style="@style/appSelectionTextView" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>